<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Should appear as action button if possible -->
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_make_font_bigger"
        android:contentDescription="@string/action_make_font_bigger"
        android:title="@string/action_make_font_bigger"
        android:titleCondensed="@string/action_make_font_bigger_condensed"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_make_font_smaller"
        android:contentDescription="@string/action_make_font_smaller"
        android:title="@string/action_make_font_smaller"
        android:titleCondensed="@string/action_make_font_smaller_condensed"
        app:showAsAction="ifRoom" />

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_force_reload"
        android:title="@string/action_force_reload"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_website"
        android:title="@string/action_view_website"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_toggle_theme"
        android:title="@string/action_switch_theme"
        app:showAsAction="never" />

</menu>